fix uneven toolbar buttons

--- a/theme-src/common/gtk-3.20/_common.scss
+++ b/theme-src/common/gtk-3.20/_common.scss
@@ -1176,7 +1176,7 @@ toolbar {
       margin-bottom: 1px;
     }
     & .linked button {
-      margin: 0;
+      margin-right: 0;
     }
   }
 }
